# ayaoki-rs

./: Cargo.toml
src/: main.rs
src/events/: handler.rs  message_create.rs  mod.rs
