[package]
name = "twl-ayaoki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
twilight-cache-inmemory = "0.15.1"
twilight-gateway = { version = "0.15.1", features = ["simd-json" ] }
twilight-http = "0.15.1"
twilight-model = "0.15.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
anyhow = "1"
dotenv = "0.15.0"
